--- a/docker/config/.env.dist
+++ b/docker/config/.env.dist
@@ -8,5 +8,5 @@
 
 # If you want to set the uid and gid of the app user that we use in the
 # containers, you can do that with these two variables.
-# ANTENNA_UID=
-# ANTENNA_GID=
+# USE_UID=
+# USE_GID=
