--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -54,10 +54,10 @@ jobs:
           just run --detach --wait --wait-timeout=10 web nginx
           just shell systemtest/test_env.sh local
 
-      - name: Set Docker image tag to "latest" for updates of the main branch
+      - name: Set Docker image tag to the shortened commit sha for updates of the main branch
         if: github.ref == 'refs/heads/main'
         run: |
-          echo IMAGE_TAG=latest >> "$GITHUB_ENV"
+          echo IMAGE_TAG=$(git rev-parse --short=10 "$GITHUB_SHA") >> "$GITHUB_ENV"
       - name: Set Docker image tag to the git tag for tagged builds
         if: startsWith(github.ref, 'refs/tags/')
         run: |
