CRINGE-207: Migrate from pip-tools to uv.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,9 +4,12 @@ services:
   base:
     volumes:
       - .:/app
+      - /app/.venv
   web:
     volumes:
       - .:/app
+      - /app/.venv
   test:
     volumes:
       - .:/app
+      - /app/.venv
