--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,22 @@
 # NOTE(smarnach): To upgrade Python to a new minor or major version, see
 # https://antenna.readthedocs.io/en/latest/dev.html#upgrading-to-a-new-python-version
-FROM --platform=linux/amd64 python:3.11.14-slim-bookworm@sha256:bcbbec29f7a3f9cbee891e3cd69d7fe4dec7e281daf36cbd415ddd8ee2ba0077
+FROM --platform=linux/amd64 ghcr.io/astral-sh/uv:python3.11-bookworm-slim@sha256:4f5d923c9dcea037f57bda425dd209f3ec643da2f0b74227f68d09dab0b3bb36
 
 # Set up user and group
 ARG groupid=10001
 ARG userid=10001
 
-WORKDIR /app/
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONPATH=/app/ \
+    PORT=8000 \
+    UV_PYTHON_DOWNLOADS=0
+
+EXPOSE $PORT
+
+WORKDIR /app
+
+# add a non-privileged user for installing and running the application
 RUN groupadd --gid $groupid app && \
     useradd -g app --uid $userid --shell /usr/sbin/nologin --create-home app && \
     chown app:app /app/
@@ -21,22 +31,15 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-COPY --chown=app:app requirements.txt /app/
-
-RUN pip install -U 'pip<25.1' && \
-    pip install --no-cache-dir --no-deps --only-binary :all: -r requirements.txt && \
-    pip check --disable-pip-version-check
-
 USER app
 
-# Install the app
-COPY --chown=app:app . /app/
+# Install Python dependencies
+RUN --mount=type=cache,uid=$userid,gid=$groupid,target=/home/app/.cache/uv \
+    --mount=type=bind,source=uv.lock,target=uv.lock \
+    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+    uv sync --locked
+ENV PATH="/app/.venv/bin:$PATH"
 
-# Set Python-related environment variables to reduce annoying-ness
-ENV PYTHONUNBUFFERED 1
-ENV PYTHONDONTWRITEBYTECODE 1
-
-ENV PORT 8000
-EXPOSE $PORT
+COPY --chown=app:app . /app
 
 ENTRYPOINT ["/app/bin/entrypoint.sh"]
