CRINGE-207: Remove version pins from pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,29 +5,29 @@ readme = "README.rst"
 version = "1.0.0"  # Required, but unused
 requires-python = "==3.11.*"
 dependencies = [
-    "attrs==25.4.0",
-    "bandit==1.9.3",
-    "click==8.2.1",
-    "dockerflow==2026.1.26",
-    "everett==3.5.0",
-    "falcon==4.2.0",
-    "fillmore==2.2.0",
-    "freezegun==1.5.5",
-    "google-cloud-pubsub==2.34.0",
-    "google-cloud-storage==3.8.0",
-    "gunicorn==24.1.1",
-    "isodate==0.7.2",
-    "markus[datadog]==5.2.0",
-    "more-itertools==10.8.0",
-    "obs-common==2026.1.21",
-    "pytest==9.0.2",
-    "requests==2.32.5",
-    "ruff==0.14.14",
-    "sentry-sdk==2.51.0",
-    "sphinx==9.0.4",
-    "sphinx-rtd-theme==3.1.0",
-    "urlwait==1.0",
-    "werkzeug==3.1.5",
+    "attrs",
+    "bandit",
+    "click",
+    "dockerflow",
+    "everett",
+    "falcon",
+    "fillmore",
+    "freezegun",
+    "google-cloud-pubsub",
+    "google-cloud-storage",
+    "gunicorn",
+    "isodate",
+    "markus[datadog]",
+    "more-itertools",
+    "obs-common",
+    "pytest",
+    "requests",
+    "ruff",
+    "sentry-sdk",
+    "sphinx",
+    "sphinx-rtd-theme",
+    "urlwait",
+    "werkzeug",
 ]
 
 [dependency-groups]
